# ALICE-Presence

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: event.rs  group.rs  identity.rs  lib.rs  protocol.rs  replay_guard.rs  serialize.rs  session.rs  spatial.rs  verification.rs  vivaldi.rs
