[package]
name = "alice-presence"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "Phase synchronization of presence — cryptographic proof of encounter via ZKP, Vivaldi coordinates, and minimal P2P sync"
license = "MIT"
repository = "https://github.com/ext-sakamoro/ALICE-Presence"
keywords = ["presence", "zkp", "vivaldi", "p2p", "proximity"]

[dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
